Update workspace package namespaces